--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 aes = "0.8.4"
 cipher = "0.4.4"
-clap = { version = "4.5.6", features = ["derive"] }
+clap = { version = "4.5.6", features = ["derive", "env"] }
 hex = "0.4.3"
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
@@ -15,3 +15,6 @@ ring = "0.17.8"
 rpassword = "7.3.1"
 sha2 = "0.10.8"
 tiny-bip39 = "1.0.0"
+
+[dev-dependencies]
+tempfile = "3.10.1"
