--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "mgs"
 version = "0.1.0"
+authors = ["mgravitt"]
 edition = "2021"
+description = "A tool for generating and saving secret mnemonics"
+readme = "README.md"
+repository = "https://github.com/mgravitt/mgs"
+license = "MIT"
 
 [dependencies]
-aes = "0.8.4"
-cipher = "0.4.4"
 clap = { version = "4.5.6", features = ["derive", "env"] }
-hex = "0.4.3"
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
 rand = "0.8.5"
