--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "mgs"
+name = "sgs"
 version = "0.1.0"
 authors = ["mgravitt"]
 edition = "2021"
-description = "A tool for generating and saving secret mnemonics"
+description = "A tool for generating and saving secret mnemonics and keys"
 readme = "README.md"
-repository = "https://github.com/mgravitt/mgs"
+repository = "https://github.com/mgravitt/sgs"
 license = "MIT"
 
 [dependencies]
@@ -15,6 +15,7 @@ pbkdf2 = "0.12.2"
 rand = "0.8.5"
 ring = "0.17.8"
 rpassword = "7.3.1"
+secp256k1 = { version = "0.29", features = ["rand-std"] }
 sha2 = "0.10.8"
 tiny-bip39 = "1.0.0"
 
